# Gobang

./: readme.md
Gobang/: CMakeLists.txt  Gobang.pro  boardwidget.h  gomoku.h  main.cpp  mainwindow.h  settingsdialog.h
build-Gobang-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-Gobang-Desktop_Qt_5_9_0_MinGW_32bit-Debug/debug/: moc_boardwidget.cpp  moc_mainwindow.cpp  moc_settingsdialog.cpp
